@@ -18,61 +18,46 @@ if {[lsearch [namespace children] ::tcltest] == -1} {
     namespace import -force ::tcltest::*
 }
 
-if {[string compare testsetassocdata [info commands testsetassocdata]] != 0} {
-    puts "This application hasn't been compiled with the tests for assocData,"
-    puts "therefore I am skipping all of these tests."
-    ::tcltest::cleanupTests
-    return
-}
+testConstraint testgetassocdata [llength [info commands testgetassocdata]]
+testConstraint testsetassocdata [llength [info commands testsetassocdata]]
+testConstraint testdelassocdata [llength [info commands testdelassocdata]]
 
-test assocd-1.1 {testing setting assoc data} {
+test assocd-1.1 {testing setting assoc data} testsetassocdata {
    testsetassocdata a 1
 } ""
-test assocd-1.2 {testing setting assoc data} {
+test assocd-1.2 {testing setting assoc data} testsetassocdata {
    testsetassocdata a 2
 } ""
-test assocd-1.3 {testing setting assoc data} {
+test assocd-1.3 {testing setting assoc data} testsetassocdata {
    testsetassocdata 123 456
 } ""
-test assocd-1.4 {testing setting assoc data} {
+test assocd-1.4 {testing setting assoc data} testsetassocdata {
    testsetassocdata abc "abc d e f"
 } ""
 
-test assocd-2.1 {testing getting assoc data} {
+test assocd-2.1 {testing getting assoc data} testgetassocdata {
    testgetassocdata a
 } 2
-test assocd-2.2 {testing getting assoc data} {
+test assocd-2.2 {testing getting assoc data} testgetassocdata {
    testgetassocdata 123
 } 456
-test assocd-2.3 {testing getting assoc data} {
+test assocd-2.3 {testing getting assoc data} testgetassocdata {
    testgetassocdata abc
 } {abc d e f}
-test assocd-2.4 {testing getting assoc data} {
+test assocd-2.4 {testing getting assoc data} testgetassocdata {
    testgetassocdata xxx
 } ""
 
-test assocd-3.1 {testing deleting assoc data} {
+test assocd-3.1 {testing deleting assoc data} testdelassocdata {
    testdelassocdata a
 } ""
-test assocd-3.2 {testing deleting assoc data} {
+test assocd-3.2 {testing deleting assoc data} testdelassocdata {
    testdelassocdata 123
 } ""
-test assocd-3.3 {testing deleting assoc data} {
+test assocd-3.3 {testing deleting assoc data} testdelassocdata {
    list [catch {testdelassocdata nonexistent} msg] $msg
 } {0 {}}
 
 # cleanup
 ::tcltest::cleanupTests
 return
-
-
-
-
-
-
-
-
-
-
-
-
