@@ -89,15 +89,3 @@ test case-3.3 {single-argument form for pattern/command pairs} {
 # cleanup
 ::tcltest::cleanupTests
 return
-
-
-
-
-
-
-
-
-
-
-
-
