@@ -18,44 +18,27 @@ if {[lsearch [namespace children] ::tcltest] == -1} {
     namespace import -force ::tcltest::*
 }
 
-if {[info commands testdcall] == {}} {
-    puts "This application hasn't been compiled with the \"testdcall\""
-    puts "command, so I can't test Tcl_CallWhenDeleted."
-    ::tcltest::cleanupTests
-    return
-}
+testConstraint testdcall [llength [info commands testdcall]]
 
-test dcall-1.1 {deletion callbacks} {
+test dcall-1.1 {deletion callbacks} testdcall {
     lsort -increasing [testdcall 1 2 3]
 } {1 2 3}
-test dcall-1.2 {deletion callbacks} {
+test dcall-1.2 {deletion callbacks} testdcall {
     testdcall
 } {}
-test dcall-1.3 {deletion callbacks} {
+test dcall-1.3 {deletion callbacks} testdcall {
     lsort -increasing [testdcall 20 21 22 -22]
 } {20 21}
-test dcall-1.4 {deletion callbacks} {
+test dcall-1.4 {deletion callbacks} testdcall {
     lsort -increasing [testdcall 20 21 22 -20]
 } {21 22}
-test dcall-1.5 {deletion callbacks} {
+test dcall-1.5 {deletion callbacks} testdcall {
     lsort -increasing [testdcall 20 21 22 -21]
 } {20 22}
-test dcall-1.6 {deletion callbacks} {
+test dcall-1.6 {deletion callbacks} testdcall {
     lsort -increasing [testdcall 20 21 22 -21 -22 -20]
 } {}
 
 # cleanup
 ::tcltest::cleanupTests
 return
-
-
-
-
-
-
-
-
-
-
-
-
